complete build_in.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,19 @@
 cmake_minimum_required(VERSION 2.8)
-project(WORLD_PARSER)
+project(TABULAR_PARSER)
+add_compile_options(-std=c++11)
 
 #--------- compile -------------
-include_directories("${PROJECT_SOURCE_DIR}/include")
-set(SRC_LIST main.cpp)
-add_executable(world_paser ${SRC_LIST})
+include_directories("${PROJECT_SOURCE_DIR}/src")
+set(SRC_LIST src/main.cpp  src/build_in.cpp)
+add_executable(tabular_parser ${SRC_LIST})
 
 
 #--------- install -------------
-install(TARGETS )
-install()
+#install(TARGETS )
+#install()
 
 
 #--------- test ----------------
-add_test()
+#add_test()
 
 
