--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(GLOG_LIBRARY "libglog.so")
 
 include_directories("${PROJECT_SOURCE_DIR}/src" ${GLOG_INCLUDE_DIR})
 link_directories(${GLOG_LINK_DIR})
-set(SRC_LIST src/main.cpp  src/build_in.cpp src/user.cpp src/parser.cpp)
+set(SRC_LIST src/main.cpp  src/utils.cpp src/user.cpp src/parser.cpp)
 add_executable(tabular_parser ${SRC_LIST})
 target_link_libraries(tabular_parser ${GLOG_LIBRARY})
 
