--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,33 @@
+# required: /usr/lib/x86_64-linux-gnu/libglog.a&libgtest.a
+
+
 cmake_minimum_required(VERSION 2.8)
 project(TABULAR_PARSER)
 add_compile_options(-std=c++11)
 
-#--------- compile -------------
 set(GLOG_INCLUDE_DIR "/usr/include/")
 set(GLOG_LINK_DIR "/usr/lib/x86_64-linux-gnu/")
-set(GLOG_LIBRARY "libglog.so")
+set(GLOG_LIBRARY "glog")
 
-include_directories("${PROJECT_SOURCE_DIR}/src" ${GLOG_INCLUDE_DIR})
-link_directories(${GLOG_LINK_DIR})
-set(SRC_LIST src/main.cpp  src/utils.cpp src/user.cpp src/parser.cpp)
-add_executable(tabular_parser ${SRC_LIST})
-target_link_libraries(tabular_parser ${GLOG_LIBRARY})
+set(GTEST_INCLUDE_DIR "/usr/include/")
+set(GTEST_LINK_DIR "/usr/lib/x86_64-linux-gnu/")
+set(GTEST_LIBRARY "gtest")
 
-#--------- install -------------
-#install(TARGETS )
-#install()
+#--------- compile -------------
+include_directories("${PROJECT_SOURCE_DIR}/src" ${GLOG_INCLUDE_DIR} ${GTEST_INCLUDE_DIR})
+link_directories(${GLOG_LINK_DIR} ${GTEST_LINK_DIR})
+set(SRC_LIST src/demo.cpp  src/utils.cpp src/user.cpp src/parser.cpp)
+add_executable(demo ${SRC_LIST})
+target_link_libraries(demo ${GLOG_LIBRARY} pthread)
 
 
 #--------- test ----------------
-#enable_testing()
-#add_subdirectory(test)
-
-#add_test()
+set(SRC_TEST test/test_parser.cpp src/utils.cpp src/user.cpp src/parser.cpp)
+add_executable(test_parser ${SRC_TEST})
+target_link_libraries(test_parser ${GTEST_LIBRARY} ${GLOG_LIBRARY} pthread)
+enable_testing()
+##add_subdirectory(test)
+add_test(NAME test_parser
+	     COMMAND test_parser)
 
 
