--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,12 @@ target_link_libraries(demo ${GLOG_LIBRARY} pthread)
 
 
 #--------- test ----------------
-#set(SRC_TEST test/test_parser.cpp src/utils.cpp src/user.cpp src/parser.cpp)
-#add_executable(test_parser ${SRC_TEST})
-#target_link_libraries(test_parser ${GTEST_LIBRARY} ${GLOG_LIBRARY} pthread)
-#enable_testing()
-###add_subdirectory(test)
-#add_test(NAME test_parser
-#	     COMMAND test_parser)
+set(SRC_TEST test/test_parser.cpp src/utils.cpp src/user.cpp src/parser.cpp)
+add_executable(test_parser ${SRC_TEST})
+target_link_libraries(test_parser ${GTEST_LIBRARY} ${GLOG_LIBRARY} pthread)
+enable_testing()
+##add_subdirectory(test)
+add_test(NAME test_parser
+	     COMMAND test_parser)
 
 
